# whatsthedamage-web

./: README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
src/: app.py  config.py  forms.py  routes.py
src/templates/: index.html  result.html
tests/: test_routes.py
